Remove BoxLayout in ExternalProtocolDialog.

This was used as a replacement for a FillLayout as this exercised a bug
with views::Checkbox. views::Checkbox now includes the image height as
well as the LabelButton insets and this item is no longer clipped with a
FillLayout.

Bug: chromium:760651
Change-Id: I285485f10ee02b4c7bacdc78de3fa32d95e36717
Reviewed-on: https://chromium-review.googlesource.com/755496
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514265}