chrome/browser/ui/views/external_protocol_dialog.cc
@@ -22,7 +22,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/gfx/text_elider.h"
 #include "ui/views/controls/button/checkbox.h"
 #include "ui/views/controls/label.h"
-#include "ui/views/layout/box_layout.h"
+#include "ui/views/layout/fill_layout.h"
 #include "ui/views/widget/widget.h"
 
 using content::WebContents;
@@ -105,9 +105,7 @@ ExternalProtocolDialog::ExternalProtocolDialog(
   set_margins(
       provider->GetDialogInsetsForContentType(views::CONTROL, views::CONTROL));
 
-  // TODO(crbug.com/760651): We should use FillLayout since we only have one
-  // child, but it causes the checkbox image to get cut off in MD.
-  SetLayoutManager(new views::BoxLayout(views::BoxLayout::kHorizontal));
+  SetLayoutManager(new views::FillLayout());
 
   DCHECK(delegate_->GetMessageText().empty());
   remember_decision_checkbox_ =
